Adding and removing data Array Compatibility Advance operation with business example

--- a/phase-2.ipynb
+++ b/phase-2.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "e99e049a",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "8e1f1f2f",
    "metadata": {},
    "outputs": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "595fd76b",
    "metadata": {},
    "outputs": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "bcaff671",
    "metadata": {},
    "outputs": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "id": "e25a9e2c",
    "metadata": {},
    "outputs": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "id": "bc03bb12",
    "metadata": {},
    "outputs": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "id": "d8990d89",
    "metadata": {},
    "outputs": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "id": "cf8e64ea",
    "metadata": {},
    "outputs": [
@@ -201,22 +201,138 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 1  2  3  4  5 12 14 16 18 20]\n"
+      "['False' 'False' 'False' 'False' 'False' 'True' 'True' 'True' 'True'\n",
+      " 'True']\n"
      ]
     }
    ],
    "source": [
-    "condition_array = np.where(numbers > 5, numbers*2,numbers)\n",
+    "condition_array = np.where(numbers > 5, \"True\", \"False\")\n",
     "print(condition_array)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3d08f5da",
+   "metadata": {},
+   "source": [
+    "### Adding and removing data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "3815bf1a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3 4 5 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr1 = np.array([1, 2, 3])\n",
+    "arr2 = np.array([4, 5, 6])\n",
+    "\n",
+    "combined = np.concatenate((arr1, arr2))\n",
+    "print(combined)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a151bc3c",
+   "metadata": {},
+   "source": [
+    "### Array Compatibility"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "9f6a1076",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Compatibility Shape False\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.array([1, 2, 3])\n",
+    "b = np.array([4, 5, 6, 7])\n",
+    "c = np.array([7, 8, 9])\n",
+    "\n",
+    "print(\"Compatibility Shape\", a.shape == b.shape)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3815bf1a",
+   "id": "f7e052a8",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original: \n",
+      " [[1 2]\n",
+      " [3 4]]\n",
+      "New Row: \n",
+      " [[5 6]]\n",
+      "With New Row: \n",
+      " [[1 2]\n",
+      " [3 4]\n",
+      " [5 6]]\n",
+      "With New Col: \n",
+      " [[1 2 7]\n",
+      " [3 4 8]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "original = np.array([[1, 2],[3, 4]])\n",
+    "new_row = np.array([[5, 6]])\n",
+    "\n",
+    "with_new_row = np.vstack((original,new_row))\n",
+    "\n",
+    "print(\"Original: \\n\",original)\n",
+    "print(\"New Row: \\n\",new_row)\n",
+    "print(\"With New Row: \\n\",with_new_row)\n",
+    "\n",
+    "new_col = np.array([[7],[8]])\n",
+    "\n",
+    "with_new_col = np.hstack((original,new_col))\n",
+    "\n",
+    "print(\"With New Col: \\n\",with_new_col)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "51fe2515",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Array after deletion:  [1 2 4 5 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = np.array([1, 2, 3, 4, 5, 6])\n",
+    "deleted = np.delete(arr, 2)\n",
+    "\n",
+    "print(\"Array after deletion: \",deleted)"
+   ]
   }
  ],
  "metadata": {
